--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+@import url('https://fonts.google.com/share?selection.family=Open+Sans:ital,wght@0,300..800;1,300..800');
 @import "tailwindcss";
 
 :root {
